--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", welcome_index_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
+    <div class="user-info pull-right">
       <% if current_user %>
         <%= current_user.email %>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
@@ -19,6 +20,7 @@
         <%= link_to "Sign In", new_user_session_path %>
         <%= link_to "Sign Up", new_user_registration_path %>
       <% end %>
+    </div>
 
     </ul>
     <p class="notice"><%= notice %></p>
