--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Wikis</h1>
+<h1>Wikis</h1>
+<% if policy(Wiki.new).show? %>
 
 <table>
   <thead>
@@ -20,7 +21,9 @@
         <td><%= wiki.title %></td>
         <td><%= wiki.image %></td>
         <td><%= wiki.user %></td>
+        <% if policy(Wiki.new).create? %>
         <td><%= link_to 'Show', wiki %></td>
+        <% end %>
         <td><%= link_to 'Edit', edit_wiki_path(wiki) %></td>
         <td><%= link_to 'Destroy', wiki, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -31,3 +34,4 @@
 <br>
 
 <%= link_to 'New Wiki', new_wiki_path %>
+<% end %>
